A new version of My Tester is out. It adds assertion assertNoException.

For complete list of changes since previous version, see CHANGELOG.md.